linux-source-3.13.0/error.txt
  CC      partie3/syscall2_log710.o
In file included from partie3/syscall2_log710.c:2:0:
include/linux/syscalls.h:853:43: warning: ‘struct procdata’ declared inside parameter list [enabled by default]
 asmlinkage long sys_log710a2017as2(struct procdata *pudata);
                                           ^
include/linux/syscalls.h:853:43: warning: its scope is only this definition or declaration, which is probably not what you want [enabled by default]
partie3/syscall2_log710.c:10:43: warning: ‘struct procdata’ declared inside parameter list [enabled by default]
 asmlinkage long sys_log710a2017as2(struct procdata *pudata) {
                                           ^
partie3/syscall2_log710.c:10:17: error: conflicting types for ‘sys_log710a2017as2’
 asmlinkage long sys_log710a2017as2(struct procdata *pudata) {
                 ^
In file included from partie3/syscall2_log710.c:2:0:
include/linux/syscalls.h:853:17: note: previous declaration of ‘sys_log710a2017as2’ was here
 asmlinkage long sys_log710a2017as2(struct procdata *pudata);
                 ^
partie3/syscall2_log710.c: In function ‘sys_log710a2017as2’:
partie3/syscall2_log710.c:11:18: error: storage size of ‘kdata’ isn’t known
  struct procdata kdata;
                  ^
partie3/syscall2_log710.c:11:18: warning: unused variable ‘kdata’ [-Wunused-variable]
make[1]: *** [partie3/syscall2_log710.o] Error 1
make: *** [_module_partie3] Error 2
